# bbq-rs

./: .gitignore  Cargo.toml  README.md  build.rs
bbq-core/: Cargo.toml
bbq-core/src/: consts.rs  error.rs  event.rs  lib.rs
bbq-core/src/data/: mongo.rs
bbq-core/src/fetch/: mod.rs  sina.rs  trade_date.rs
bbq-core/src/proto/: proto.rs
bbq-core/src/trader/: account.rs  config.rs  deal.rs  entrust.rs  event.rs  events.rs  mod.rs  position.rs  quot.rs  quotation.rs  signal.rs  trader.rs
bbq-example/broker/: Cargo.toml
bbq-example/broker/src/: lib.rs
bbq-example/risk/: Cargo.toml
bbq-example/risk/src/: lib.rs
bbq-example/strategy/: Cargo.toml
bbq-example/strategy/src/: lib.rs
bbq-rs/: Cargo.toml
bbq-rs/res/: config.toml  settings.toml
bbq-rs/src/: app.rs  consts.rs  event.rs  font.rs  main.rs  store.rs
bbq-rs/src/ui/: account.rs  app.rs  data.rs  entrust.rs  mod.rs  position.rs  setting.rs  trade.rs  tree.rs
bbq-strategy/: Cargo.toml
bbq-strategy-py/: setup.py
bbq-strategy-py/example/: example.py  example_broker.py  example_risk.py  example_strategy.py
bbq-strategy-py/qstrategy/: account.py  base_strategy.py  broker.py  entrust.py  funddb.py  js_encoder.py  log.py  mongodb.py  position.py  risk.py  stockdb.py  strategy.py  trade_signal.py
bbq-strategy/src/: broker.rs  lib.rs  risk.rs  strategy.rs
bbq-trader/: Cargo.toml
bbq-trader/config/: config.toml
bbq-trader/src/: account.rs  broker.rs  config.rs  lib.rs  main.rs  quotation.rs  risk.rs  strategy.rs  trader.rs
