[package]
authors = ["Luo Guochun <450171094@qq.com>"]
description = "bbq-trader"
edition = "2021"
include = ["src/**/*", "README.md"]
name = "bbq-core"
readme = "README.md"
repository = "https://github.com/buf1024/bbq-rs"
version = "0.1.0"
# build = "../build.rs"
# include = ["src/**/*", "README.md", "build.rs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.55"
chrono = {version = "0.4.19", features = ["serde"]}
lazy_static = "1.4.0"
log = "0.4.14"
fern = "0.6.0"
mongodb = {version = "2.1.0", features = ["bson-chrono-0_4"]}
regex = "1.5.4"
reqwest = {version = "0.11.9", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
async-trait = "0.1.52"
futures = "0.3.21"
uuid = "0.8.2"


[dev-dependencies]
tokio = {version = "1.17.0", features = ["full"]}

