[package]
name = "bbq-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luo Guochun <450171094@qq.com>"]
description = "bbq-rs frontend"
repository = "https://github.com/buf1024/bbq-rs"
readme = "README.md"
build = "../build.rs"
include = ["src/**/*", "README.md", "build.rs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
eframe = { path = "../../egui/eframe", features = ["default", "persistence"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.55"
lazy_static = "1.4.0"
bincode = "1.3.3"
bs58 = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.12"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5.4"
chrono = "0.4.19"
rdev = "0.5.1"
async-trait = "0.1"
log = "0.4.14"
toml = "0.5.8"
bbq-core = {path = "../bbq-core"}

[build-dependencies]
vergen = { version = "6.0", default-features = false, features = ["build", "git", "cargo"] }
anyhow = "1.0"
