[package]
name = "bbq-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luo Guochun <450171094@qq.com>"]
description = "bbq-rs frontend"
repository = "https://github.com/buf1024/bbq-rs"
readme = "README.md"
include = ["src/**/*", "README.md", "build.rs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
bbq-core = {path = "../bbq-core"}
eframe = { path = "../../egui/eframe", features = ["default", "persistence"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.55"
lazy_static = "1.4.0"
bs58 = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4.14"
toml = "0.5.8"

[build-dependencies]
vergen = { version = "6.0", default-features = false, features = ["build", "git", "cargo"] }
anyhow = "1.0"
