[package]
name = "bbq-strategy"
version = "0.1.0"
edition = "2021"
authors = ["Luo Guochun <450171094@qq.com>"]
description = "bbq-rs strategy interface"
repository = "https://github.com/buf1024/bbq-rs"
readme = "README.md"
include = ["src/**/*", "README.md"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
bbq-core = {path = "../bbq-core"}
anyhow = "1.0.55"
async-trait = "0.1.52"
tokio = {version = "1.17.0", features = ["sync"]}
uuid = "0.8.2"
